examples/test/testpolicy6108.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6108
  namespace: namespace167
spec:
  podSelector:
    matchLabels:
      key25: value30
      key43: value19
      key2: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value41
          key45: value4
      podSelector:
        matchLabels:
          key22: value17
